<resources>
    <string name="app_name">AttJournal</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="nav_header_title">РТУ МИРЭА</string>
    <string name="nav_header_desc">Заголовок меню</string>
    <string name="action_settings">Настройки</string>
    <string name="error">Упс, что-то пошло не так</string>

    <string name="menu_home">Посещаемость</string>
    <string name="menu_gallery">Группа</string>
    <string name="menu_slideshow">Расписание</string>

    <string name="day_of_week_1">Пн</string>
    <string name="day_of_week_2">Вт</string>
    <string name="day_of_week_3">Ср</string>
    <string name="day_of_week_4">Чт</string>
    <string name="day_of_week_5">Пт</string>
    <string name="day_of_week_6">Сб</string>
    <string name="week">Неделя</string>

    <string name="subject_name_input">Введите название предмета</string>
    <string name="subject_type_input"></string>
    <string name="all_weeks">Все</string>
    <string name="odd_weeks">Нечёт</string>
    <string name="even_weeks">Чёт</string>
    <string name="clear_weeks">Очистить</string>
    <string name="subject_confirm">Изменить расписание</string>
    <string name="default_type_input">пр</string>

    <string name="collision_alert_title">Перезапись</string>
    <string name="title_activity_student">StudentActivity</string>


    <string name="student_first_name">Имя</string>
    <string name="student_last_name">Фамилия</string>
    <string name="student_patronymic">Отчество</string>
    <string name="student_order">Номер в списке (если фиксированный)</string>
    <string name="student_telephone">Телефон</string>
    <string name="student_email">Электронная почта</string>
    <string name="input_student_first_name">Введите имя</string>
    <string name="input_student_last_name">Введите фамилию</string>
    <string name="input_student_patronymic">Введите отчество</string>
    <string name="input_student_order">Введите номер (необязательно)</string>
    <string name="input_student_telephone">Введите телефон (необязательно)</string>
    <string name="input_student_email">Введите электронную почту (необязательно)</string>
    <string name="student_add">Сохранить</string>
    <string name="student_insufficient_input">Недостаточный ввод</string>
    <string name="student_wrong_order_input">Номер занят</string>
    <string name="student_fragment">Студент</string>
    <string name="student_delete_alert">Удалить?</string>
    <string name="subject_null">Пусто</string>
    <string name="lecture">лк</string>
    <string name="practice">пр</string>
    <string name="class_number_additional_text">-я пара</string>

    <string name="month_1">Янв</string>
    <string name="month_2">Фев</string>
    <string name="month_3">Мар</string>
    <string name="month_4">Апр</string>
    <string name="month_5">Май</string>
    <string name="month_6">Июн</string>
    <string name="month_7">Июл</string>
    <string name="month_8">Авг</string>
    <string name="month_9">Сен</string>
    <string name="month_10">Окт</string>
    <string name="month_11">Ноя</string>
    <string name="month_12">Дек</string>
    <string name="menu_tables">Таблицы</string>
    <string name="menu_date_control">Управление временем</string>
    <string name="tables_fragment">Таблицы</string>
    <string name="date_control_fragment">Управление временем</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Дата начала семестра: </string>
    <string name="change">изменить</string>
    <string name="time">Время начала первой пары: </string>
    <string name="break_duration">Длительность перерыва (в минутах): </string>
    <string name="big_break_duration">Длительность большого перерыва (в минутах):</string>
    <string name="big_break_after">Большие перемены после: </string>
    <string name="class_duration">Длительность пар: </string>
    <string name="eraseScheduleButtonText">Стереть расписание</string>
    <string name="save">Сохранить</string>
    <string name="action_help">Справка</string>
    <string name="help_1">Расписание:\n






    </string>
    <string name="help_2">Предметы добавляются в отмеченные недели и записываются на места отмеченных пар. При добавлении того же предмета, его расписание будет перезаписано в отмеченных неделях.</string>
    <string name="help_3">Пример: Добавим предмет Мат. анализ по нечётным неделям по понедельникам первой парой. После подтверждения снова добавим Мат. анализ, отметив первую и вторую неделю, по вторникам первой парой. Тогда в результате пара будет во вторник на первой и второй неделе, а на всех других нечётных - в понедельник</string>
    <string name="help_4"> Группа:</string>
    <string name="help_5">Группа поддерживается в отсортированном по алфавиту порядке. Студентам можно задавать фиксированные номера, для того чтобы можно было верно сгенерировать таблицы, если в списке группы студенты находятся не по порядку</string>
    <string name="help_6">Управление временем:</string>
    <string name="help_7">Можно устанавливать размер пар, перемен, начало семестра и пары, после которых идёт большая перемена. Эти пары необходимо указывать через запятую в порядке возрастания</string>
    <string name="subject_name">Название предмета</string>
    <string name="subject_weeks">Выберите недели</string>
    <string name="subject_days">Отметьте пары предмета для выбранных недель</string>

</resources>