<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?android:attr/textCheckMark"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_tables" />
        <item
            android:id="@+id/nav_date_control"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_date_control" />
    </group>
</menu>