<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="stu.ilexa.testjournal1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="stu.ilexa.testjournal1.ui.students.StudentsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_students" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:tag="ScheduleFragment"
        android:name="stu.ilexa.testjournal1.ui.schedule.ScheduleFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/student_fragment"
        android:tag="StudentFragment"
        android:name="stu.ilexa.testjournal1.ui.students.StudentFragment"
        android:label="@string/student_fragment"
        tools:layout="@layout/fragment_student"/>
</navigation>